# database-from-scratch-oop-project

./: CMakeLists.txt  README.md  main.cpp
documentation/: _aggregation_operations_8cpp.html  _aggregation_operations_8cpp__incl.map  _aggregation_operations_8cpp__incl.md5  _aggregation_operations_8h.html  _aggregation_operations_8h__dep__incl.map  _aggregation_operations_8h__dep__incl.md5  _aggregation_operations_8h__incl.map  _aggregation_operations_8h__incl.md5  _aggregation_operations_8h_source.html  _collection_8cpp.html  _collection_8cpp.js  _collection_8cpp__dep__incl.map  _collection_8cpp__dep__incl.md5  _column_8cpp.html  _column_8cpp.js  _column_8cpp__incl.map  _column_8cpp__incl.md5  _column_8h.html  _column_8h__dep__incl.map  _column_8h__dep__incl.md5  _column_8h__incl.map  _column_8h__incl.md5  _column_8h_source.html  _column_type_8cpp.html  _column_type_8cpp.js  _column_type_8cpp__dep__incl.map  _column_type_8cpp__dep__incl.md5  _column_type_8cpp__incl.map  _column_type_8cpp__incl.md5  _command_parser_8cpp.html  _command_parser_8cpp__incl.map  _command_parser_8cpp__incl.md5  _command_parser_8h.html  _command_parser_8h__dep__incl.map  _command_parser_8h__dep__incl.md5  _command_parser_8h__incl.map  _command_parser_8h__incl.md5  _command_parser_8h_source.html  _console_launcher_8cpp.html  _console_launcher_8cpp__incl.map  (+326 more)
documentation/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+20 more)
src/collections/: Collection.cpp
src/database_manager/: AggregationOperations.cpp  AggregationOperations.h  DbFileManager.cpp  DbFileManager.h  DbStreamManager.cpp  DbStreamManager.h
(+26 files in other folders)
